feat: add antony spin as main feature of the page

--- a/src/App.css
+++ b/src/App.css
@@ -1,45 +1,52 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+.container {
+  position: relative;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+  overflow: hidden;
+}
+
+.antony-img {
+  height: 100vh;
+  width: auto;
+  display: block;
+  position: relative;
+  z-index: 1;
+}
+
+.flare-text {
   text-align: center;
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: white;
+  font-size: 2rem;
+  z-index: 2;
+  text-shadow: 0 0 5px black;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-.logo.antony:hover {
-  filter: drop-shadow(0 0 2em #fb1717aa);
+.flare {
+  animation: flare 0.3s ease-out;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+@keyframes flare {
+  0% {
+    transform: translateX(-50%) scale(1);
+    color: #da291c;
+    text-shadow: 0 0 10px #fbe122, 0 0 20px #f0f;
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    transform: translateX(-50%) scale(1.1);
+    color: #da291c;
+    text-shadow: 0 0 20px #fbe122, 0 0 30px #f0f;
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  100% {
+    transform: translateX(-50%) scale(1);
+    color: white;
+    text-shadow: none;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
 }
